# swift-bridge

./: .gitignore  404.html  Cargo.toml  README.md  build.rs  index.html  print.html  searchindex.js  searchindex.json  test-integration.sh  test-swift-packages.sh  test-swift-rust-integration.sh
SwiftRustIntegrationTestRunner/test-release-fails/: .gitignore  Cargo.toml  Package.swift  README.md  SwiftExterns.swift  build.sh  main.swift
SwiftRustIntegrationTestRunner/test-release-fails/src/: lib.rs
book/: README.md  book.toml
crates/swift-bridge-build/: Cargo.toml
crates/swift-bridge-build/src/: generate_core.rs  lib.rs  package.rs
crates/swift-bridge-build/src/generate_core/: boxed_fn_support.rs  option_support.rs  result_support.rs  rust_string.c.h  rust_string.swift  rust_vec.swift  string.swift
crates/swift-bridge-build/tests/: integration-tests.rs  package-test.rs
crates/swift-bridge-build/tests/sample-project/: Cargo.toml  build.rs  build.sh
crates/swift-bridge-build/tests/sample_project/: .gitignore  Cargo.toml  build.sh
crates/swift-bridge-build/tests/test-project/: .gitignore  Package.swift
crates/swift-bridge-build/tests/test-swift-packages/: Cargo.toml  build.sh
crates/swift-bridge-build/tests/test_project/: Package.swift
crates/swift-bridge-cli/: Cargo.toml
crates/swift-bridge-cli/src/: clap_app.rs  clap_exec.rs  lib.rs  main.rs
crates/swift-bridge-ir/: Cargo.toml
crates/swift-bridge-ir/src/: bridge_macro_attributes.rs  bridge_module_attributes.rs  bridged_struct.rs  bridged_type.rs  build_in_types.rs  built_in_types.rs  codegen.rs  errors.rs  extern_rust.rs  extern_swift.rs  lib.rs  parse.rs  parsed_extern_fn.rs  support_types.rs  test_utils.rs  to_tokens.rs
crates/swift-bridge-ir/src/bridged_type/: boxed_fn.rs  bridgeable_custom_result.rs  bridgeable_pointer.rs  bridgeable_primitive.rs  bridgeable_result.rs  bridgeable_str.rs  bridgeable_string.rs  bridgeable_tuple.rs  bridged_opaque_type.rs  bridged_option.rs  bridged_result.rs  built_in_primitive.rs  built_in_tuple.rs  shared_enum.rs  shared_struct.rs
crates/swift-bridge-ir/src/codegen/: codegen_tests.rs  generate_c_header.rs  generate_rust_tokens.rs  generate_swift.rs
crates/swift-bridge-ir/src/errors/: parse_error.rs
crates/swift-bridge-ir/src/extern_rust/: generate_c_header.rs  generate_swift.rs
crates/swift-bridge-ir/src/parse/: parse_custom_result.rs  parse_enum.rs  parse_extern_mod.rs  parse_struct.rs  type_declarations.rs
crates/swift-bridge-ir/src/parsed_extern_fn/: to_extern_c_fn.rs  to_extern_c_param_names_and_types.rs  to_rust_impl_call_swift.rs  to_swift.rs  to_swift_func.rs
crates/swift-bridge-ir/src/to_tokens/: option.rs
crates/swift-bridge-macro/: Cargo.toml
crates/swift-bridge-macro/src/: lib.rs  module.rs  test_utils.rs
crates/swift-bridge-macro/src/module/: parse.rs  to_tokens.rs
crates/swift-bridge-macro/tests/ui/: args-into-argument-not-found.rs  args-into-argument-not-found.stderr  incorrect-argument-type.rs  incorrect-argument-type.stderr  incorrect-return-type.rs  incorrect-return-type.stderr  invalid-associated-to-attribute.rs  invalid-associated-to-attribute.stderr  invalid-copy-attribute.rs  invalid-copy-attribute.stderr  invalid-module-item.rs  invalid-module-item.stderr  opaque-copy-type-mut-ref.rs  opaque-copy-type-mut-ref.stderr  unrecognized-argument-attribute.rs  unrecognized-argument-attribute.stderr  unrecognized-enum-attribute.rs  unrecognized-enum-attribute.stderr  unrecognized-function-attribute.rs  unrecognized-function-attribute.stderr  unrecognized-opaque-type-attribute.rs  unrecognized-opaque-type-attribute.stderr
crates/swift-bridge-macro/tests/ui-pass/: result.rs
crates/swift-integration-tests/: Cargo.toml  build.rs
crates/swift-integration-tests/src/: argument_attributes.rs  async_function.rs  bool.rs  boxed_functions.rs  bridged_struct.rs  conditional_compilation.rs  enum_attributes.rs  expose_opaque_rust_struct.rs  expose_opaque_rust_type.rs  expose_struct.rs  function_attributes.rs  futures_experiment.rs  generics.rs  import_opaque_swift_class.rs  lib.rs  lib.rs.h  opaque_type_attributes.rs  option.rs  pointer.rs  primitive.rs  result.rs  rust_function_uses_opaque_swift_type.rs  sendable_attribute.rs  shared_types.rs  single_representation_type_elision.rs  slice.rs  string.rs  struct_attributes.rs  swift_function_uses_opaque_rust_type.rs  swift_function_uses_opaque_swift_type.rs  tuple.rs  vec.rs
crates/swift-integration-tests/src/argument_attributes/: argument_label.rs
crates/swift-integration-tests/src/enum_attributes/: already_declared.rs  derive.rs  swift_name.rs
crates/swift-integration-tests/src/function_attributes/: args_into.rs  get.rs  get_with.rs  identifiable.rs  into_return_type.rs  return_into.rs  return_with.rs  rust_name.rs  swift_name.rs
crates/swift-integration-tests/src/opaque_type_attributes/: already_declared.rs  copy.rs  copy_equatable.rs  equatable.rs  hashable.rs
crates/swift-integration-tests/src/shared_types/: shared_enum.rs  shared_struct.rs
crates/swift-integration-tests/src/struct_attributes/: already_declared.rs  derive.rs  swift_name.rs
examples/async-functions/: .gitignore  Cargo.toml  README.md  bridging-header.h  build.sh  main.swift
examples/async-functions/src/: lib.rs
examples/codegen-visualizer/: Cargo.toml  README.md  build.rs
examples/codegen-visualizer/CodegenVisualizer/: BridgingHeader.h  rust-output-files.xcfilelist  xcode-build-rust.sh
examples/codegen-visualizer/CodegenVisualizer/CodegenVisualizer/: CodegenVisualizerApp.swift  ContentView.swift
examples/codegen-visualizer/CodegenVisualizer/CodegenVisualizer.xcodeproj/: project.pbxproj
examples/codegen-visualizer/src/: lib.rs
examples/ios-rust-analyzer/: Cargo.toml  README.md  build.rs
examples/ios-rust-analyzer/IosRustAnalyzer/: BridgingHeader.h  build-rust.sh
examples/ios-rust-analyzer/IosRustAnalyzer/IosRustAnalyzer/: ContentView.swift  IosRustAnalyzerApp.swift
examples/ios-rust-analyzer/IosRustAnalyzer/IosRustAnalyzer.xcodeproj/: project.pbxproj
examples/ios-rust-analyzer/src/: lib.rs
(+1087 files in other folders)
