[package]
name = "swift-bridge"
version = "0.1.21"
edition = "2021"
keywords = ["swift", "ffi", "bindings", "ios", "mac"]
description = "Generate FFI bindings for safe interop between Rust and Swift."
repository = "https://github.com/chinedufn/swift-bridge"
license = "Apache-2.0/MIT"

build = "build.rs"

[build-dependencies]
swift-bridge-build = {version = "0.1.21", path = "crates/swift-bridge-build"}

[dependencies]
swift-bridge-macro = {version = "0.1.21", path = "crates/swift-bridge-macro"}

[workspace]
members = [
  "crates/swift-bridge-macro",
  "crates/swift-bridge-build",
  "crates/swift-bridge-ir",
  "crates/swift-integration-tests",

  "examples/codegen-visualizer",
  "examples/ios-rust-analyzer",
]
