[package]
name = "test-release-fails"
version = "0.1.0"
edition = "2021"
publish = []

build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = { git = "https://github.com/chinedufn/swift-bridge.git", branch = "master" }

[dependencies]
swift-bridge = { git = "https://github.com/chinedufn/swift-bridge.git", branch = "master", features = [
    "async",
] }

[workspace]
