[package]
name = "swift-bridge-build"
version = "0.1.14"
edition = "2021"
keywords = ["swift", "ffi", "bindings", "ios", "mac"]
description = "Parse Rust files for swift-bridge modules and generate the corresponding Swift and C code for them."
license = "Apache-2.0/MIT"

[dependencies]
proc-macro2 = "1"
swift-bridge-ir = {version = "0.1.14", path = "../swift-bridge-ir"}
syn = {version = "1"}
