[package]
name = "swift-bridge-build"
version = "0.1.52"
edition = "2021"
keywords = ["swift", "ffi", "bindings", "ios", "mac"]
description = "Parse Rust files for swift-bridge modules and generate the corresponding Swift and C code for them."
repository = "https://github.com/chinedufn/swift-bridge"
license = "Apache-2.0/MIT"

[dependencies]
proc-macro2 = "1"
swift-bridge-ir = {version = "0.1.52", path = "../swift-bridge-ir"}
syn = {version = "1"}
tempfile = "3.3"
