[package]
name = "swift-bridge-ir"
version = "0.1.57"
edition = "2021"
keywords = ["swift", "ffi", "bindings", "ios", "mac"]
description = "Holds the data structures and logic for bridge module parsing and code generation."
repository = "https://github.com/chinedufn/swift-bridge"
license = "Apache-2.0/MIT"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["full"]}
