[package]
name = "codegen-visualizer"
version = "0.1.0"
edition = "2021"
publish = []

build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = {path = "../../crates/swift-bridge-build"}

[dependencies]
crossbeam-channel = "0.5"
proc-macro2 = "1"
syn = "1"
swift-bridge = {path = "../../"}
swift-bridge-ir = {path = "../../crates/swift-bridge-ir"}
quote = "1"