[package]
name = "test-swift-packages"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = { path = "../../../swift-bridge-build"}

[dependencies]
swift-bridge = { path = "../../../../." }
